# prototyper

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
docker/: entrypoint.sh
docs/: PRD.md  autonomous-run.md  progress.txt  tasklist.md
examples/starter-cards/: README.md  project.yaml
examples/starter-cards/data/: cards.csv
examples/starter-cards/templates/: card.html
src/prototyper/: __init__.py  __main__.py  build.py  cli.py  config.py  cutlines.py  data.py  history.py  pack.py  pdf.py  preview.py  render.py  sizing.py  watch.py
tests/: test_build.py  test_config.py  test_cutlines.py  test_data.py  test_example_project.py  test_history.py  test_note.py  test_pack.py  test_packaging.py  test_pdf.py  test_preview.py  test_render.py  test_scaffold.py  test_sizing.py  test_watch.py  test_watch_cli.py
